--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-14  Priit Laes  <plaes at svn dot gnome dot org>
+
+	* et.po: Translation updated by Ivar Smolin
+
 2008-02-14  Runa Bhattacharjee <runabh@gmail.com>
 
 	* kn.po: Updated Translation for Kannada by Shankar Prasad
