Fix checking when to display errors (#514135)
2008-02-15  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-mime-actions.c:
        * libnautilus-private/nautilus-vfs-file.c:
	Fix checking when to display errors (#514135)



svn path=/trunk/; revision=13756

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-02-15  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-mime-actions.c:
+        * libnautilus-private/nautilus-vfs-file.c:
+	Fix checking when to display errors (#514135)
+
 2008-02-14  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-file-operations.c:
