Fix typo, now you can set custom icons again. (#512795)
2008-02-15  Cosimo Cecchi  <cosimoc@gnome.org>

	* src/file-manager/fm-properties-window.c:
	(should_show_custom_icon_buttons):
	Fix typo, now you can set custom icons again. (#512795)

svn path=/trunk/; revision=13757

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-02-15  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* src/file-manager/fm-properties-window.c:
+	(should_show_custom_icon_buttons):
+	Fix typo, now you can set custom icons again. (#512795)
+
 2008-02-15  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-mime-actions.c:
