Don't build selection list in wrong order. (#330357)
2008-02-15  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-dnd.c:
        (nautilus_drag_build_selection_list):
	Don't build selection list in wrong order. (#330357)



svn path=/trunk/; revision=13758

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-02-15  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-dnd.c:
+        (nautilus_drag_build_selection_list):
+	Don't build selection list in wrong order. (#330357)
+
 2008-02-15  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* src/file-manager/fm-properties-window.c:
