--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-16 Arangel Angov <arangel@linux.net.mk>
+
+        * mk.po: Updated Macedonian translation.
+
 2008-02-14  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
 	* es.po: Updated Spanish translation
