--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-02-18  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-directory-async.c:
+        (link_info_nautilus_link_read_callback):
+	Avoid free of random memory if desktop file reading
+	failed.
+
 2008-02-15  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-dnd.c:
