Removed unused files. (#515259)
2008-02-19  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/Makefile.am:
        * libnautilus-private/nautilus-file-operations-progress-icons.h:
        * libnautilus-private/nautilus-file-operations-progress.[ch]:
	Removed unused files. (#515259)
	
        * libnautilus-private/nautilus-file-operations.c:
	Don't include removed file



svn path=/trunk/; revision=13769

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2008-02-19  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/Makefile.am:
+        * libnautilus-private/nautilus-file-operations-progress-icons.h:
+        * libnautilus-private/nautilus-file-operations-progress.[ch]:
+	Removed unused files. (#515259)
+	
+        * libnautilus-private/nautilus-file-operations.c:
+	Don't include removed file
+
 2008-02-18  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-directory-async.c:
