--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2008-02-19  Alexander Larsson  <alexl@redhat.com>
+
+        Reviewed by NOBODY (OOPS!).
+
+        * POTFILES.in:
+
 2008-02-18  Hendrik Richter  <hendrikr@gnome.org>
 
 	* de.po: Updated German translation.
