Update changelog entry
svn path=/trunk/; revision=13770

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,8 +1,7 @@
 2008-02-19  Alexander Larsson  <alexl@redhat.com>
 
-        Reviewed by NOBODY (OOPS!).
-
         * POTFILES.in:
+	Removed nautilus-file-operations-progress.c
 
 2008-02-18  Hendrik Richter  <hendrikr@gnome.org>
 
