Move comments around to help translators (#463616) Patch from Yann Simon
2008-02-19  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-clipboard.c:
        * src/file-manager/fm-directory-view.c:
        * src/file-manager/fm-icon-view.c:
        * src/file-manager/fm-list-view.c:
        * src/nautilus-navigation-window-menus.c:
        * src/nautilus-spatial-window.c:
        * src/nautilus-window-menus.c:
	Move comments around to help translators (#463616)
	Patch from Yann Simon



svn path=/trunk/; revision=13771

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,17 @@
 2008-02-19  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-clipboard.c:
+        * src/file-manager/fm-directory-view.c:
+        * src/file-manager/fm-icon-view.c:
+        * src/file-manager/fm-list-view.c:
+        * src/nautilus-navigation-window-menus.c:
+        * src/nautilus-spatial-window.c:
+        * src/nautilus-window-menus.c:
+	Move comments around to help translators (#463616)
+	Patch from Yann Simon
+
+2008-02-19  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/Makefile.am:
         * libnautilus-private/nautilus-file-operations-progress-icons.h:
         * libnautilus-private/nautilus-file-operations-progress.[ch]:
