--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-19  Djihed Afifi <djihed@gmail.com> 
+
+	* ar.po: Updated Arabic Translation by Abdelmonam Kouka.
+
 2008-02-19  Daniel Nylander <po@danielnylander.se>
 
 	* sv.po: Updated Swedish translation.
