--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-20  Pawan Chitrakar <chautari@gmail.com>
+
+	* ne.po: Updated Nepali Translation.
+
 2008-02-09  Nurali Abdurahmonov <mavnur@gmail.com>
 
 	* uz@cyrillic.po: added ubek cyrillic translation
