--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2008-02-20  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-icon-info.c:
+        (nautilus_icon_info_get_pixbuf_nodefault_at_size):
+        (nautilus_icon_info_get_pixbuf_at_size):
+	Don't scale icons if not needed (#515903)
+	Patch from Christian Neumair
+
 2008-02-19  Alexander Larsson  <alexl@redhat.com>
 
         * src/file-manager/fm-tree-model.[ch]:
