--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2008-02-20  Alexander Larsson  <alexl@redhat.com>
 
+        * src/nautilus-main.c:
+	Call eel_debug_shut_down() after freeing
+	NautilusApplications (fixes warning about
+	bookmark leaks).
+	Pointed out by Christian Neumair
+	
+2008-02-20  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-icon-info.c:
         (nautilus_icon_info_get_pixbuf_nodefault_at_size):
         (nautilus_icon_info_get_pixbuf_at_size):
