Initial work on open with tab with multple selected files. (#343930) Patch
2008-02-20  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-mime-application-chooser.[ch]:
        * libnautilus-private/nautilus-open-with-dialog.[ch]:
        * src/file-manager/fm-directory-view.c:
        * src/file-manager/fm-properties-window.c:
	Initial work on open with tab with multple selected
	files. (#343930)
	Patch from Cosimo Cecchi


svn path=/trunk/; revision=13782

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2008-02-20  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-mime-application-chooser.[ch]:
+        * libnautilus-private/nautilus-open-with-dialog.[ch]:
+        * src/file-manager/fm-directory-view.c:
+        * src/file-manager/fm-properties-window.c:
+	Initial work on open with tab with multple selected
+	files. (#343930)
+	Patch from Cosimo Cecchi
+
+2008-02-20  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-file-operations.c:
 	Duplicate if src and dest dirs are the same (#512392)
 
