Finish work on open with tab with multiple files selected. (#343930).
2008-02-20  Cosimo Cecchi  <cosimoc@gnome.org>

	* libnautilus-private/nautilus-mime-application-chooser.c:
	(get_extension_from_file), (set_uri_and_type_for_multiple_files):
	Finish work on open with tab with multiple files selected. (#343930).

svn path=/trunk/; revision=13784

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-02-20  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* libnautilus-private/nautilus-mime-application-chooser.c:
+	(get_extension_from_file), (set_uri_and_type_for_multiple_files):
+	Finish work on open with tab with multiple files selected. (#343930).
+
 2008-02-20  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-mime-application-chooser.[ch]:
