--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-20  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
+
+	* es.po: Updated Spanish translation
+
 2008-02-20  Changwoo Ryu  <cwryu@debian.org>
 
 	* ko.po: Updated Korean translation by Young-Ho Cha.
