--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-20  Duarte Loreto <happyguy_pt@hotmail.com>
+
+	* pt.po: Updated Portuguese translation.
+
 2008-02-20  Hendrik Richter  <hendrikr@gnome.org>
 
 	* de.po: Updated German translation.
