Update Simplified Chinese translation.
2008-02-21  Funda Wang  <fundawang@gmail.com>

        * zh_CN.po: Update Simplified Chinese translation.


svn path=/trunk/; revision=13789

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-21  Funda Wang  <fundawang@gmail.com>
+
+	* zh_CN.po: Update Simplified Chinese translation.
+	
 2008-02-20  Duarte Loreto <happyguy_pt@hotmail.com>
 
 	* pt.po: Updated Portuguese translation.
