Update the trash icon on the pathbar according to the trash state.
2008-02-21  Cosimo Cecchi  <cosimoc@gnome.org>

	* src/nautilus-pathbar.c: (trash_state_changed_cb),
	(nautilus_path_bar_init):
	Update the trash icon on the pathbar according to the trash state.
	(#332162).

svn path=/trunk/; revision=13790

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-02-21  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* src/nautilus-pathbar.c: (trash_state_changed_cb),
+	(nautilus_path_bar_init):
+	Update the trash icon on the pathbar according to the trash state.
+	(#332162).
+
 2008-02-20  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* libnautilus-private/nautilus-mime-application-chooser.c:
