updated hebrew translation
svn path=/trunk/; revision=13792

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-21  Yair Hershkovitz  <yairhr@gmail.com>
+
+	* he.po: Updated Hebrew translation.
+
 2008-02-21  Funda Wang  <fundawang@gmail.com>
 
 	* zh_CN.po: Update Simplified Chinese translation.
