--- a/po/ja.po
+++ b/po/ja.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: nautilus trunk\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-02-21 22:34+0900\n"
-"PO-Revision-Date: 2008-02-21 22:34+0900\n"
+"PO-Revision-Date: 2008-02-22 00:50+0900\n"
 "Last-Translator: Takeshi AIHANA <takeshi.aihana@gmail.com>\n"
 "Language-Team: Japanese <gnome-translation@gnome.gr.jp>\n"
 "MIME-Version: 1.0\n"
@@ -5488,7 +5488,7 @@ msgstr "フォルダ・ウィンドウで開く(_I)"
 
 #: ../src/nautilus-navigation-window-menus.c:479
 msgid "Open a folder window for the displayed location"
-msgstr "この場所のフォルダ・ウィンドウを開きます"
+msgstr "この場所をフォルダ・ウィンドウで開きます"
 
 #. name, stock id, label
 #: ../src/nautilus-navigation-window-menus.c:481
@@ -6438,12 +6438,3 @@ msgstr "現在のビューのズーム・レベルを設定します"
 #: ../src/network-scheme.desktop.in.h:2
 msgid "Network"
 msgstr "ネットワーク"
-
-#~ msgid "%s %ld of %ld %s"
-#~ msgstr "%s %ld / %ld %s"
-
-#~ msgid "(%d:%02d:%02d Remaining)"
-#~ msgstr "(残り %d:%02d:%02d)"
-
-#~ msgid "(%d:%02d Remaining)"
-#~ msgstr "(残り %d:%02d)"
