Updated French translation by Robert-André Mauchin, Bruno Brouad et
2008-02-21  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* fr.po: Updated French translation by Robert-André Mauchin, Bruno
	Brouad et Claude Paroz.

svn path=/trunk/; revision=13800

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-02-21  Stéphane Raimbault  <stephane.raimbault@gmail.com>
+
+	* fr.po: Updated French translation by Robert-André Mauchin, Bruno
+	Brouad et Claude Paroz.
+
 2008-02-21  Inaki Larranaga Murgoitio  <dooteo@euskalgnu.org>
 
 	* eu.po: Updated Basque translation.
