--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-22 Arangel Angov <arangel@linux.net.mk>
+
+        * mk.po: Updated Macedonian translation.
+
 2008-02-21  Stéphane Raimbault  <stephane.raimbault@gmail.com>
 
 	* fr.po: Updated French translation by Robert-André Mauchin, Bruno
