--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-22  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* th.po: Updated Thai translation.
+
 2008-02-22 Arangel Angov <arangel@linux.net.mk>
 
         * mk.po: Updated Macedonian translation.
