--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-22  Artur Flinta  <aflinta@gmail.com>
+
+	* pl.po: Updated Polish translation by GNOME PL Team.
+
 2008-02-22  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* th.po: Updated Thai translation.
