cs.po: Updated Czech translation by Kamil Paral.
svn path=/trunk/; revision=13807

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-22  Petr Kovar  <pknbe@volny.cz>
+
+	* cs.po: Updated Czech translation by Kamil Paral.
+
 2008-02-22  Artur Flinta  <aflinta@gmail.com>
 
 	* pl.po: Updated Polish translation by GNOME PL Team.
