Updated Occitan translation
svn path=/trunk/; revision=13808

--- a/po/oc.po
+++ b/po/oc.po
@@ -1225,7 +1225,7 @@ msgstr "_Amagar"
 
 #: ../libnautilus-private/nautilus-column-chooser.c:427
 msgid "Use De_fault"
-msgstr "Utilisar las valors per de_faut"
+msgstr "Utilizar las valors per de_faut"
 
 #: ../libnautilus-private/nautilus-column-utilities.c:43
 #: ../libnautilus-private/nautilus-mime-application-chooser.c:286
