--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-02-24  Leonardo Ferreira Fontenelle  <leonardof@svn.gnome.org>
+
+	* pt_BR.po: Brazilian Portuguese translation updated by Vladimir Melo
+	and myself.
+
 2008-02-22  Petr Kovar  <pknbe@volny.cz>
 
 	* cs.po: Updated Czech translation by Kamil Paral.
